--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Django==4.1.6
 django-leaflet==0.28.3
 psycopg2-binary==2.9.5
 python-dotenv==0.21.1
+djangorestframework-gis==1.0
+djangorestframework==3.14.0
+djangorestframework-gis==1.0
